--- a/Assignment1_Q8.ipynb
+++ b/Assignment1_Q8.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write a function called show_stars(rows). If rows is 5, it should print the following:\n",
+        "Q8. Write a function called show_stars(rows). If rows is 5, it should print the following:\n",
         "\n",
         "```\n",
         "*\n",
