--- a/Assignment1_Q2.ipynb
+++ b/Assignment1_Q2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIeCJAXdg9QA1xrFVnV0PL",
+      "authorship_tag": "ABX9TyM7ryNsbtCjFE9oQ7nakcDW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Q2. Program for compound interest"
+      ],
+      "metadata": {
+        "id": "WFcXIKcANVCZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "NI6ky4URGBnT"
       },
@@ -53,7 +62,7 @@
         "id": "dSk0u7DcJWg5",
         "outputId": "e71d0b73-49cd-4718-f2e9-ce1f4627f015"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
