--- a/Assignment1_Q3.ipynb
+++ b/Assignment1_Q3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOesst5H5CXUB+68iqVda4H",
+      "authorship_tag": "ABX9TyOiWv9qPqjGM3Z3SOEDf2o8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Q3. Program to check Armstrong Number"
+      ],
+      "metadata": {
+        "id": "S2y92T1ZNjGo"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "m1x6W7m1KDfS"
       },
@@ -51,7 +60,7 @@
         "id": "9t4Cqb6NNDFP",
         "outputId": "29c2f70d-acf6-4d84-9325-29c7aae2ff8c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
