Basic Python Assignment1_Q1

--- a/Assignment1_Q1.ipynb
+++ b/Assignment1_Q1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBh+VCmlBRCyppd9oqRAOv",
+      "authorship_tag": "ABX9TyPe5mClWl32UjVKQp14vZvC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Q1. Program for factorial of a number"
+      ],
+      "metadata": {
+        "id": "sNa-Qfcrhe-k"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "93HPOFfh_N1I"
       },
@@ -48,9 +57,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vogm4wWZC_Xb",
-        "outputId": "f748d959-60b2-42eb-e2bf-3a3ce8872468"
+        "outputId": "26ea2dfd-4ff5-46db-898c-57508c98f00a"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
