--- a/Assignment1_Q5.ipynb
+++ b/Assignment1_Q5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDy54U35Te/frGzGE3lbxu",
+      "authorship_tag": "ABX9TyOC8TDkrKh5vOl0MIvmP45i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "  if n in memory: return memory[n]\n",
         "  if n==1: return 0\n",
         "  if n==2 or n==3: return 1\n",
-        "  memory[n]= fib(n-1,memory={})+fib(n-2,memory={})\n",
+        "  memory[n]= fib(n-1,memory)+fib(n-2,memory)\n",
         "  return memory[n]"
       ]
     },
@@ -65,7 +65,7 @@
         "id": "mDXSSMYlLAek",
         "outputId": "5854c60b-043a-4464-c7d2-bfd9f7a0b1db"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
